--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,7 +1,7 @@
 ARG version
 FROM almalinux:${version:-8}
 RUN cat /etc/*release
-ARG course
-ARG trainer
+ARG course=docker
+ARG trainer=siva
 RUN echo "Course is ${course}, Trainer is : ${trainer}"
 CMD ["sleep","60"]
