--- a/expense-docker/backend/Dockerfile
+++ b/expense-docker/backend/Dockerfile
@@ -5,7 +5,7 @@ RUN mkdir /opt/server
 RUN chown expense:expense -R /opt/server
 WORKDIR /opt/server
 COPY package.json .
-COPY *.js
+COPY *.js .
 RUN npm install
 CMD [ "node", "index.js"]
 
