--- a/expense-docker/frontend/Dockerfile
+++ b/expense-docker/frontend/Dockerfile
@@ -2,4 +2,4 @@ FROM nginx
 RUN rm -rf /usr/share/nginx/html/*
 RUN rm -rf /etc/nginx/nginx.conf
 RUN rm -rf /etc/nginx/conf.d/default.conf
-COPY code/* /usr/share/nginx/html/
+COPY code /usr/share/nginx/html/
