--- a/expense-docker/frontend/Dockerfile
+++ b/expense-docker/frontend/Dockerfile
@@ -3,3 +3,4 @@ RUN rm -rf /usr/share/nginx/html/*
 RUN rm -rf /etc/nginx/nginx.conf
 RUN rm -rf /etc/nginx/conf.d/default.conf
 COPY code /usr/share/nginx/html/
+COPY expense.conf /etc/nginx/nginx.conf
