--- a/expense-docker/frontend/Dockerfile
+++ b/expense-docker/frontend/Dockerfile
@@ -4,3 +4,4 @@ RUN rm -rf /etc/nginx/nginx.conf
 RUN rm -rf /etc/nginx/conf.d/default.conf
 COPY code /usr/share/nginx/html/
 COPY expense.conf /etc/nginx/nginx.conf
+CMD ["nginx", "-g", "daemon off;"]
