--- a/tomcat-test/Dockerfile
+++ b/tomcat-test/Dockerfile
@@ -1,5 +1,5 @@
 FROM tomcat:9
-WORKSPACE /usr/local/tomcat/webapps/
+WORKDIR /usr/local/tomcat/webapps/
 COPY sample.war .
 EXPOSE 8080
 CMD ["catalina.sh", "run"]
